--- a/scss/publish/_sidebar-layout.scss
+++ b/scss/publish/_sidebar-layout.scss
@@ -1,3 +1,12 @@
+@forward "../shared/cutout-circles";
+@forward "../shared/cutouts";
+@forward "../shared/workleaves";
+@forward "../shared/workspace";
+
+body {
+    --sidedock-inset-border-color: var(--background-secondary);
+}
+
 .site-body-left-column {
     background-color: var(--workspace-background);
     padding-right: 10px;
