--- a/scss/window/sidebars/_fas-bookmark-tabs.scss
+++ b/scss/window/sidebars/_fas-bookmark-tabs.scss
@@ -39,6 +39,12 @@ body {
             padding-top: calc(var(--header-height) - var(--workspace-top-margin));
         }
     }
+
+	.mod-macos .mod-sidedock .sidebar-toggle-button {
+        margin-top: var(--workspace-top-margin);
+        padding: 0;
+        height: calc(var(--header-height) + 0.5 * var(--cutout-corner-radius, 0))
+    }
 }
 
 @media (hover: hover) {
